# minidump-writer-ios-example

./: .flutter-plugins-dependencies  .gitignore  .gitmodules  CLAUDE.md  FFI_INTEGRATION.md  README.md  build.yaml  build_runner.sh  flutter_rust_bridge.yaml  pubspec.yaml
MinidumpWriterExample/MinidumpWriterExample.xcodeproj/: project.pbxproj
MinidumpWriterExample/MinidumpWriterExample/App/: MinidumpWriterExampleApp.swift
MinidumpWriterExample/MinidumpWriterExample/Resources/: Info.plist
MinidumpWriterExample/MinidumpWriterExample/RustBridge/: MinidumpWriter.swift  MinidumpWriterExample-Bridging-Header.h
MinidumpWriterExample/MinidumpWriterExample/Views/: ContentView.swift  CrashTestView.swift  MinidumpListView.swift
RustLib/: Cargo.toml  build.rs  build_ios.sh
RustLib/include/: minidump_writer_ios.h
RustLib/src/: lib.rs
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/minidump_writer_test/: MainActivity.kt
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/screens/: crash_test_screen.dart  home_screen.dart  minidump_list_screen.dart
lib/services/: minidump_service.dart
lib/src/rust/: api.dart  frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
linux/: CMakeLists.txt
linux/runner/: my_application.cc
macos/: libminidump_flutter_bridge.dylib
macos/Runner.xcodeproj/: project.pbxproj
macos/Runner/Configs/: AppInfo.xcconfig
minidump-gen/: Cargo.toml
minidump-gen/src/: main.rs
minidump-handler/: Cargo.toml
minidump-handler/src/: lib.rs
rust/: Cargo.toml
rust/minidump-flutter-bridge/: Cargo.toml
rust/minidump-flutter-bridge/src/: frb_generated.rs  lib.rs
rust/minidump-flutter-bridge/src/api/: minidump.rs  mod.rs
rust/minidump-gen-cli/: Cargo.toml  README.md
rust/minidump-handler/: Cargo.toml
rust/minidump-handler/src/: lib.rs
test/: widget_test.dart
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
