[package]
name = "minidump_writer_ios_ffi"
version = "0.1.0"
edition = "2021"

[lib]
name = "minidump_writer_ios"
crate-type = ["staticlib", "cdylib"]

[dependencies]
minidump-handler = { path = "../minidump-handler" }
libc = "0.2"

[build-dependencies]
cbindgen = "0.26"

[profile.release]
lto = true
opt-level = "z"
strip = true