[package]
name = "minidump-gen"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "minidump-gen"
path = "src/main.rs"

[dependencies]
minidump-handler = { path = "../minidump-handler" }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
colored = "2"

[profile.release]
# 크래시 덤프를 위해 디버그 심볼 유지
debug = true
# 스택 언와인딩 최적화 비활성화 (정확한 스택 추적을 위해)
panic = "abort"