[package]
name = "minidump-handler"
version = "0.1.0"
edition = "2021"

[dependencies]
minidump-writer = { path = "../deps/minidump-writer" }
libc = "0.2"
anyhow = "1"
once_cell = "1"

# macOS (개발/테스트용)
[target.'cfg(target_os = "macos")'.dependencies]
mach2 = "0.4"

# iOS (실제 디바이스)
[target.'cfg(target_os = "ios")'.dependencies]
mach2 = "0.4"

# iOS 시뮬레이터도 target_os는 "ios"지만 target_arch로 구분
# aarch64-apple-ios-sim (M1+ Mac)
# aarch64-apple-ios (실제 디바이스)

# Linux (CI/테스트용)
[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.27", features = ["signal"] }

[dev-dependencies]
tempfile = "3"